# Vehicle-Telemetry-Simulation-in-C-

./: CMakeLists.txt  Doxyfile  README.md
ECU/: Adaptive_Cruise_Control_ECU.cpp  Adaptive_Cruise_Control_ECU.hpp  DiagnosticsECU.cpp  DiagnosticsECU.hpp  ECU.cpp  ECU.hpp
Sensors/: BatteryLevelSensor.cpp  BatteryLevelSensor.hpp  RadarSensor.cpp  RadarSensor.hpp  Sensor.hpp  SpeedSensor.cpp  SpeedSensor.hpp  TemperatureSensor.cpp  TemperatureSensor.hpp
car/: Car.cpp  Car.hpp
logger/: CarLogger.cpp  CarLogger.hpp
src/: main.cpp
